adds hamburger icon to navbar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
     <body>
 
+      <div class="navbar-toggle" id="navbar-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
+
       <nav class="top-nav">
         <ul class="nav-items">
           <li><a href="#" class="nav-item">home</a></li>
