makes navbar responsive

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <i class="fas fa-bars"></i>
       </div>
 
-      <nav class="top-nav">
+      <nav class="navbar">
         <ul class="nav-items">
           <li><a href="#" class="nav-item">home</a></li>
           <li><a href="#" class="nav-item">resume</a></li>
