adds favicon and alternate favicon

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <!-- font awesome icons -->
         <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+        <link rel="alternate icon" href="img/favicon.ico">
+
+
         <script src='script.js' defer></script>
-        <title>David Calabrese | Web Developer | Personal Website</title>
+        <title>David Calabrese | Web Developer | For Hire</title>
     </head>
 
     <body>
