--- a/index.html
+++ b/index.html
@@ -5,34 +5,54 @@ Author: David Calabrese \_,` | \-'  /   )`-')
 Date: 08/28/2021         "") `"` DC  \  ((`"`
                         ___Y  ,    .'7 /|
                       (_,___/...-` (_/_/ -->
-<html lang='en'>
-    <head>
-        <meta charset='UTF-8'>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <link rel='stylesheet' href='style.css'>
-        <!-- bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-        <!-- jquery -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" defer></script>
-        <!-- popper plugin -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous" defer></script>
-        <!-- bootstrap's js plugins -->
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous" defer></script>
-        <!-- google fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <!-- font awesome icons -->
-        <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
-        <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
-        <link rel="alternate icon" href="img/favicon.ico">
-        <script src='script.js' defer></script>
-        <title>David Calabrese | Web Developer | For Hire</title>
-    </head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <!-- bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <!-- jquery -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <!-- popper plugin -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <!-- bootstrap's js plugins -->
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <!-- font awesome icons -->
+    <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
+    <link rel="alternate icon" href="img/favicon.ico" />
+    <script src="script.js" defer></script>
+    <title>David Calabrese | Web Developer | For Hire</title>
+  </head>
 
-    <body>
-
+  <body>
+    <header>
       <div class="navbar-toggle" id="navbar-toggle">
         <i class="fas fa-bars"></i>
       </div>
@@ -45,79 +65,89 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           <li><a href="#" class="nav-item">about</a></li>
           <li><a href="#" class="nav-item">photos</a></li>
         </ul>
-        </nav>
+      </nav>
 
-        <header>
+      <div class="center">
+        <img class="propic" src="img/profile-pic-circle.png" alt="" />
+        <div class="name-container">
+          <h1>David Calabrese</h1>
+        </div>
+        <h2>Software Developer</h2>
+      </div>
+    </header>
 
-          <div class="center">
-            <img class="propic" src="img/profile-pic-circle.png" alt="">
-            <div class="name-container">
-              <h1>David Calabrese</h1>
+    <main class="container">
+      <section class="cards">
+        <article class="card">
+          <a href="#">
+            <picture class="thumbnail">
+              <img src="img/corbusier.png" alt="arch" />
+            </picture>
+            <div class="card-content">
+              <h2>De Stilj</h2>
+              <p>
+                De Stilj is Dutch for "The Style". Proponents of De Stilj advocated pure abstraction and universality by
+                a reduction to the essentials of form and color. In software, a universal design aethetic speaks to a
+                wide audience.
+              </p>
             </div>
-            <h2>Software Developer</h2>
-          </div>
-        </header>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
 
-        <main class="container">
-          <section class="cards">
-            <article class="card">
-              <a href="#">
-                  <picture class="thumbnail">
-                      <img src="img/corbusier.png" alt="arch">
-                  </picture>
-                  <div class="card-content">
-                      <h2>De Stilj</h2>
-                      <p>De Stilj is Dutch for "The Style". Proponents of De Stilj advocated pure abstraction and universality by a reduction to the essentials of form and color. In software, a universal design aethetic speaks to a wide audience.</p>
-                  </div><!-- .card-content -->
-              </a>
-            </article><!-- .card -->
+        <article class="card">
+          <a href="#">
+            <picture class="thumbnail">
+              <img src="img/keith-haring.png" alt="arch" />
+            </picture>
+            <div class="card-content">
+              <h2>Just for Fun</h2>
+              <p>
+                These people in the Frank Haring painting are having fun. I believe that having fun is important. I also
+                like to work hard, and I find I work hardest when I'm having fun. Check out some of the projects I've
+                done "just for" fun.
+              </p>
+            </div>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
 
+        <article class="card">
+          <a href="#">
+            <picture class="thumbnail">
+              <img src="img/de_stijl_6.jpg" alt="arch" />
+            </picture>
+            <div class="card-content">
+              <h2>Design</h2>
+              <p>
+                This is kind of a neat design, don't you think? Straight lines, basic shapes, simple colors. A strong
+                sense of symmetry, balance and cohesion. Very simple, yet elegant, like well-designed software.
+              </p>
+            </div>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
+      </section>
 
-            <article class="card">
-              <a href="#">
-                  <picture class="thumbnail">
-                      <img src="img/keith-haring.png" alt="arch">
-                  </picture>
-                  <div class="card-content">
-                      <h2>Just for Fun</h2>
-                      <p>These people in the Frank Haring painting are having fun. I believe that having fun is important. I also like to work hard, and I find I work hardest when I'm having fun. Check out some of the projects I've done "just for" fun.</p>
-                  </div><!-- .card-content -->
-              </a>
-            </article><!-- .card -->
-
-
-            <article class="card">
-              <a href="#">
-                  <picture class="thumbnail">
-                      <img src="img/de_stijl_6.jpg" alt="arch">
-                  </picture>
-                  <div class="card-content">
-                      <h2>Design</h2>
-                      <p>This is kind of a neat design, don't you think? Straight lines, basic shapes, simple colors. A strong sense of symmetry, balance and cohesion.  Very simple, yet elegant, like well-designed software.</p>
-                  </div><!-- .card-content -->
-              </a>
-            </article><!-- .card -->
-
-          </section>
-         
-     
-        <footer>
-
-          <div class="social">
-            <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
-              <i class="fab fa-linkedin fa-2x"></i>
-            </a>
-            <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener"> 
-              <i class="fab fa-github fa-2x"></i>
-            </a>
-            <a href="https://www.facebook.com/david.calabrese.334/">
-              <i class="fab fa-facebook fa-2x"></i>
-            </a>
-            <a href="https://twitter.com/cuentodenada1">
-              <i class="fab fa-twitter fa-2x"></i>
-            </a>
-          </div>
-        </footer>
-      </main>
-    </body>
+      <footer>
+        <div class="social">
+          <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+          <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+          <a href="https://www.facebook.com/david.calabrese.334/">
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+          <a href="https://twitter.com/cuentodenada1">
+            <i class="fab fa-twitter fa-2x"></i>
+          </a>
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
