fixes dropdown nav, adds intro p

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
   <body>
     <header>
-      <div class="navbar-toggle" id="navbar-toggle">
-        <i class="fas fa-bars"></i>
-      </div>
+ 
 
       <nav class="navbar">
         <ul class="nav-items">
@@ -65,6 +63,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           <li><a href="#" class="nav-item">about</a></li>
           <li><a href="#" class="nav-item">photos</a></li>
         </ul>
+        <div class="navbar-toggle" id="navbar-toggle">
+          <i class="fas fa-bars"></i>
+        </div>
       </nav>
 
       <div class="center">
@@ -77,6 +78,12 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     </header>
 
     <main class="container">
+
+      <section class="intro">
+        <p>
+          Thanks for coming to visit! This site is currently under construction &#8212; most of the site now is just placeholders for what will eventually be (I promise) fantastic content &#8212; I appreciate your patience. I hope to be done by the end of 2021. At that point it will feature my portfolio of projects as well as a resume and other contact information for employers to find and hire me. In the meantime, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
+        </p>
+      </section>
       <section class="cards">
         <article class="card">
           <a href="#">
