switch mondrian image

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <article class="card">
           <a href="#">
             <picture class="thumbnail">
-              <img src="img/corbusier.png" alt="arch" />
+              <img src="img/mondrian-square.jpg" alt="mondrian" />
             </picture>
             <div class="card-content">
               <h2>De Stilj</h2>
