--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
       <section class="intro">
         <p>
-          Thanks for coming to visit! This site is currently under construction &#8212; most of the site now is just placeholders for what will eventually be (I promise) fantastic content &#8212; I appreciate your patience. I hope to be done by the end of 2021. At that point it will feature my portfolio of projects as well as a resume and other contact information for employers to find and hire me. In the meantime, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
+          Thanks for coming to visit! This site is currently under construction &#8212; most of the site now is just placeholders for what will eventually be (I promise) fantastic content &#8212; I appreciate your patience. I'm whittling away at the site in my spare time and I hope to be done by the end of 2021. At that point it will feature my portfolio of projects as well as a resume and other contact information for employers to find and hire me. In the meantime, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
         </p>
       </section>
       <section class="cards">
@@ -105,14 +105,13 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <article class="card">
           <a href="#">
             <picture class="thumbnail">
-              <img src="img/keith-haring.png" alt="arch" />
+              <img src="img/de_stijl_6.jpg" alt="arch" />
             </picture>
             <div class="card-content">
-              <h2>Just for Fun</h2>
+              <h2>Design</h2>
               <p>
-                These people in the Frank Haring painting are having fun. I believe that having fun is important. I also
-                like to work hard, and I find I work hardest when I'm having fun. Check out some of the projects I've
-                done "just for" fun.
+                This is kind of a neat design, don't you think? Straight lines, basic shapes, simple colors. A strong
+                sense of symmetry, balance and cohesion. Very simple, yet elegant, like well-designed software.
               </p>
             </div>
             <!-- .card-content -->
@@ -123,13 +122,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <article class="card">
           <a href="#">
             <picture class="thumbnail">
-              <img src="img/de_stijl_6.jpg" alt="arch" />
+              <img src="img/keith-haring.png" alt="arch" />
             </picture>
             <div class="card-content">
-              <h2>Design</h2>
+              <h2>Just for Fun</h2>
               <p>
-                This is kind of a neat design, don't you think? Straight lines, basic shapes, simple colors. A strong
-                sense of symmetry, balance and cohesion. Very simple, yet elegant, like well-designed software.
+                These people in the Frank Haring painting are having fun. I believe that having fun is important. I also
+                like to work hard, and I find I work hardest when I'm having fun. Check out some of the projects I've
+                done "just for" fun.
               </p>
             </div>
             <!-- .card-content -->
