adds raw resume html
added name and contact info, education & skills info

--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,83 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     </header>
 
     <main class="container">
+      <div class="container">
+        <div class="header">
+            <div class="title">
+                <h1>David Calabrese</h1>
+            </div>
 
+            <div class="email">
+                <a href="mailto:david.thomas.calabrese@gmail.com">david.thomas.calabrese@gmail.com</a>
+            </div>
+
+            <div class="city">
+                <span>Madison, WI</span>
+            </div>
+
+            <div class="phone">
+                <span>414.881.9604</span>
+            </div>
+
+            <div class="website">
+                <span><a href="DavidCalabrese.org">DavidCalabrese.org</a></span>
+            </div>
+
+        </div> <!-- end .header -->
+
+        <div class="education">
+            <div class="section-title">
+                <h2>Education</h2>
+
+                <div class="associate">
+                    <p class="degree-title"><b>Associate Degree in Web Software Development</b></p>
+                    <p class="grad-date">Anticipated Graduation Date — May 2022</p>
+                    <p class="school-name">Madison Area Technical College</p>
+                </div>
+
+                <div class="bachelor">
+                    <p class="degree-title"><b>Bachelor of Arts in Comparative Literature	</b></p>
+                    <p class="grad-date">December 2015</p>
+                    <p class="school-name">University of Wisconsin-Milwaukee</p>
+              </div>
+            </div>
+
+        </div> <!-- end .education -->
+
+        <div class="skills">
+            <div class="section-title">
+                <h2>Skills</h2>
+                <div class="skills-container">
+                  <ul class="skill-list">
+                    <li>Java, J2EE</li>
+                    <li>JavaScript, Node.js</li>
+                    <li>DBMS software: MySQL Developer, Adminer & Oracle SQL Developer</li>
+                    <li>HTML, CSS, Sass</li>
+                    <li>PHP</li>
+                    <li>Python, Django, Flask</li>
+                    <li>Git, Github, Git Flow</li>
+                    <li>Linux, Shell Scripting</li>
+                    <li>Cloud & Container Experience</li>
+                  </ul>
+                </div>
+            </div>
+
+        </div> <!-- end .skills -->
+
+        <div class="projects">
+            <div class="section-title">
+                <h2>Projects</h2>
+            </div>
+
+        </div> <!-- end .projects -->
+
+        <div class="experience">
+            <div class="section-title">
+                <h2>Experience</h2>
+            </div>
+
+        </div> <!-- end .experience -->
+    </div> <!-- end .container-->
     </main>
 
     <footer>
