Update email address

--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             <div class="contact-info">
 
                 <div class="email">
-                  <a href="mailto:david.thomas.calabrese@gmail.com">david.thomas.calabrese@gmail.com</a>
+                  <a href="mailto:dcalabrese414@gmail.com">dcalabrese414@gmail.com</a>
                 </div>
 
                 <div class="city">
