Floats project links right

--- a/resume.html
+++ b/resume.html
@@ -94,14 +94,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
             <div class="associate">
                 <p class="degree-title"><b>Associate Degree in Web Software Development</b>
-                  <span class="date-right">Anticipated Graduation Date - May 2022</span>
+                  <span class="float-right">Anticipated Graduation Date - May 2022</span>
                 </p>
                 <p class="school-name">Madison Area Technical College</p>
             </div>
 
             <div class="bachelor">
                 <p class="degree-title"><b>Bachelor of Arts in Comparative Literature	</b>
-                  <span class="date-right bach">December 2015</span>
+                  <span class="float-right bach">December 2015</span>
                 </p>
                 
                 <p class="school-name">University of Wisconsin-Milwaukee</p>
@@ -125,7 +125,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <li>Git, Github, Git Flow</li>
                 <li>Linux, Shell Scripting</li>
                 <li>Cloud & Container Experience</li>
-                <li>PHP</li>
+                <li>PHP, Laravel</li>
+                <li>Postman, API Development</li>
               </ul>
             </div>
           </section> <!-- end .skills -->
@@ -135,17 +136,17 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <h2>Projects</h2>
             </div>
                 <ul>
-                  <li>A website that uses JavaScript to pull in jokes from an API to display to user |
-                    <a href="https://github.com/davidtcalabrese/dad-jokes">Dad Jokes</a>
+                  <li>A website that uses JavaScript to pull in jokes from an API to display to user <span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/dad-jokes">Dad Jokes</a> </span>
                 </li>
-                  <li>A sorting game using the Drag-and-drop API | 
-                    <a href="https://github.com/davidtcalabrese/sort-game">City Sort</a>
+                  <li>A sorting game using the Drag-and-drop API <span class="float-right"> 
+                    <a href="https://github.com/davidtcalabrese/sort-game">City Sort</a> </span>
                 </li>
-                  <li>	A personal website (DavidCalabrese.org) that will display portfolio projects and a resume (in progress) |
-                    <a href="https://github.com/davidtcalabrese/website">Personal Website</a>
+                  <li>	A personal website (DavidCalabrese.org) that will display portfolio projects and a resume (in progress) <span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/website">Personal Website</a> </span>
                 </li>
-                  <li>School project: create a webpage for a national park |
-                    <a href="https://davidtcalabrese.github.io/friends-of-joshua-tree/">Joshua Tree</a>
+                  <li>School project: create a webpage for a national park <span class="float-right">
+                    <a href="https://davidtcalabrese.github.io/friends-of-joshua-tree/">Joshua Tree</a> </span>
                 </li>
                 </ul>
          
@@ -159,7 +160,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
             <div class="dpi">
               <p class="job-title"><b>Operations Associate</b>
-                <span class="date-right">January 2020 - February 2021</span>
+                <span class="float-right">January 2020 - February 2021</span>
               </p>
               <div class="job-bullets">
                 <ul>
@@ -172,7 +173,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
             <div class="dcf">
               <p class="job-title"><b>Eligibility Specialist</b>
-                <span class="date-right">August 2019 - January 2020</span>
+                <span class="float-right">August 2019 - January 2020</span>
               </p>
               <div class="job-bullets">
                 <ul>
@@ -183,7 +184,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
             <div class="madison-parks">
               <p class="job-title"><b>Parks Worker</b>
-                <span class="date-right">May 2018 - August 2019</span>
+                <span class="float-right">May 2018 - August 2019</span>
               </p>
               <div class="job-bullets">
                 <ul>
