Adds external link icons

--- a/resume.html
+++ b/resume.html
@@ -136,17 +136,17 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <h2>Projects</h2>
             </div>
                 <ul>
-                  <li>A website that uses JavaScript to pull in jokes from an API to display to user <span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/dad-jokes">Dad Jokes</a> </span>
+                  <li>A website that uses JavaScript async/await to pull in jokes from an API<span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/dad-jokes" target="_blank">Dad Jokes</a> </span>
                 </li>
-                  <li>A sorting game using the Drag-and-drop API <span class="float-right"> 
-                    <a href="https://github.com/davidtcalabrese/sort-game">City Sort</a> </span>
+                  <li>A sorting game using the drag-and-drop API <span class="float-right"> 
+                    <a href="https://github.com/davidtcalabrese/sort-game" target="_blank">City Sort</a> </span>
                 </li>
-                  <li>	A personal website (DavidCalabrese.org) that will display portfolio projects and a resume (in progress) <span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/website">Personal Website</a> </span>
+                  <li>A personal website (DavidCalabrese.org) that will display portfolio projects and a resume (in progress) <span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/website" target="_blank">Personal Website</a> </span>
                 </li>
                   <li>School project: create a webpage for a national park <span class="float-right">
-                    <a href="https://davidtcalabrese.github.io/friends-of-joshua-tree/">Joshua Tree</a> </span>
+                    <a href="https://davidtcalabrese.github.io/friends-of-joshua-tree/" target="_blank">Joshua Tree</a> </span>
                 </li>
                 </ul>
          
