Wraps project descriptions in spans to float

--- a/resume.html
+++ b/resume.html
@@ -136,13 +136,13 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <h2>Projects</h2>
             </div>
                 <ul>
-                  <li>A website that uses JavaScript async/await to pull in jokes from an API<span class="float-right">
+                  <li>Site using JS async/await to pull in jokes from an API<span class="float-right">
                     <a href="https://github.com/davidtcalabrese/dad-jokes" target="_blank">Dad Jokes</a> </span>
                 </li>
-                  <li>A sorting game using the drag-and-drop API <span class="float-right"> 
+                  <li>Sorting game using the HTML drag-and-drop API <span class="float-right"> 
                     <a href="https://github.com/davidtcalabrese/sort-game" target="_blank">City Sort</a> </span>
                 </li>
-                  <li>A personal website (DavidCalabrese.org) that will display portfolio projects and a resume (in progress) <span class="float-right">
+                  <li>Personal site with projects and resume (in progress) <span class="float-right">
                     <a href="https://github.com/davidtcalabrese/website" target="_blank">Personal Website</a> </span>
                 </li>
                   <li>School project: create a webpage for a national park <span class="float-right">
@@ -213,7 +213,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">
+        <a href="https://github.com/davidtcalabrese" rel="noreferrer noopener">
           <i class="fab fa-github fa-2x"></i>
         </a>
         <a href="https://www.facebook.com/david.calabrese.334/">
