Remove human validation

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         
         <div class="form">
 
-            <form action="mailto:dcalabrese414@gmail.com"
+            <form action="contact.php"
                   method="POST"
                   enctype="multipart/form-data"
                   name="EmailForm">   
