--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <ul class="nav-items">
           <li><a href="index.html" class="nav-item">home</a></li>
           <li><a href="resume.html" class="nav-item">resume</a></li>
-          <li><a href="projects.html" class="nav-item">projects</a></li>
+          <li><a href="#" class="nav-item">projects</a></li>
           <li><a href="about.html" class="nav-item">about</a></li>
           <li><a href="contact.html" class="nav-item">contact</a></li>
         </ul>
