Changes form to open email client

--- a/contact.html
+++ b/contact.html
@@ -63,14 +63,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         
         <div class="form">
 
-            <form action="contact.php"
+            <form action="mailto:dcalabrese414@gmail.com"
                   method="POST"
                   enctype="multipart/form-data"
                   name="EmailForm">   
                 <input name="name" type="text" class="feedback-input" placeholder="Name" />   
                 <input name="email" type="text" class="feedback-input" placeholder="Email" />
                 <textarea name="message" class="feedback-input" placeholder="Comment"></textarea>
-                <input type="submit" value="SUBMIT"/>
+                <input type="submit" value="SUBMIT" id="submit-contact"/>
               </form>
         </div>
 
