Adds css directory

--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <link rel="alternate icon" href="img/favicon.ico" />
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/contact.css" />
     <title>David Calabrese | Web Developer | For Hire</title>
   </head>
 
