--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <link rel="alternate icon" href="img/favicon.ico" />
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <title>David Calabrese | Web Developer | For Hire</title>
   </head>
 
