--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -48,6 +47,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <link rel="alternate icon" href="img/favicon.ico" />
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>David Calabrese | Web Developer | For Hire</title>
   </head>
 
