--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           <li><a href="resume.html" class="nav-item">resume</a></li>
           <li><a href="#" class="nav-item">projects</a></li>
           <li><a href="about.html" class="nav-item">about</a></li>
-          <li><a href="contact.php" class="nav-item">contact</a></li>
+          <li><a href="contact-form.html" class="nav-item">contact</a></li>
         </ul>
         <div class="navbar-toggle" id="navbar-toggle">
           <i class="fas fa-bars"></i>
