Adds formspree_io endpoint

--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         
         <div class="form">
 
-            <form action="mailto:dcalabrese414@gmail.com"
+            <form action="https://formspree.io/f/mbjqwnne"
                   method="POST"
-                  enctype="multipart/form-data"
                   name="EmailForm">   
                 <input name="name" type="text" class="feedback-input" placeholder="Name" />   
                 <input name="email" type="text" class="feedback-input" placeholder="Email" />
