--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
     <!-- bootstrap -->
@@ -52,7 +53,11 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     </header>
 
     <main class="container">
-        
+
+      <div class="introduction">
+        <h3>Get in touch!</h3>
+      </div>
+
         <div class="form">
 
             <form action="https://formspree.io/f/mbjqwnne"
