Adds projects page with 3 projects

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <link rel="alternate icon" href="img/favicon.ico" />
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/about.css" />
     <title>David Calabrese | Web Developer | For Hire</title>
   </head>
 
@@ -39,7 +38,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <ul class="nav-items">
           <li><a href="index.html" class="nav-item">home</a></li>
           <li><a href="resume.html" class="nav-item">resume</a></li>
-          <li><a href="#" class="nav-item">projects</a></li>
+          <li><a href="projects.html" class="nav-item">projects</a></li>
           <li><a href="about.html" class="nav-item">about</a></li>
           <li><a href="contact.html" class="nav-item">contact</a></li>
         </ul>
@@ -53,11 +52,67 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <div class="name-container">
           <h1>David Calabrese</h1>
         </div>
-        <h2>Projects</h2>
+        <h2><small>Software Developer</small></h2>
       </div>
     </header>
 
     <main class="container">
+
+      <section class="intro">
+        <p>Here are a few of the projects I've done. Click on the card to check out the code on GitHub. Some of them are hosted on GitHub pages as well.</p>
+      </section>
+
+      <section class="cards">
+
+        <article class="card">
+          <a href="https://github.com/davidtcalabrese/tax-calculator">
+            <picture class="thumbnail">
+              <img src="img/tax-calculator-screenshot-2-resized.PNG" alt="tax calculator" />
+            </picture>
+            <div class="card-content">
+              <h2>Tax Calculator</h2>
+              <p>
+                Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going. 
+              </p>
+            </div>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
+
+        <article class="card">
+          <a href="https://github.com/davidtcalabrese/dad-jokes">
+            <picture class="thumbnail">
+              <img src="img/dad-jokes-screenshot.PNG" alt="dad jokes" />
+            </picture>
+            <div class="card-content">
+              <h2>Dad Joke Fetcher</h2>
+              <p>
+                This is a site I made using JavaScript async/await to pull in jokes from an API (icanhazdadjoke). I'm a fan of Phil Dunphy, Ty Burrell's character on Modern Family, so I added him for good measure. 
+              </p>
+            </div>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
+
+        <article class="card">
+          <a href="https://github.com/davidtcalabrese/sort-game">
+            <picture class="thumbnail">
+              <img src="img/city-sort-screenshot-resized.PNG" alt="city sort" />
+            </picture>
+            <div class="card-content">
+              <h2>City Sort Game</h2>
+              <p>
+                Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going. 
+              </p>
+            </div>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
+
+      </section>
 
     </main>
 
