Fixes card links
Comments out links on first two cards, adds link to projects page on third card

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       </section>
       <section class="cards">
         <article class="card">
-          <a href="#">
+          <!-- <a href="#"> -->
             <picture class="thumbnail">
               <img src="img/mondrian-square.jpg" alt="mondrian" />
             </picture>
@@ -98,12 +98,12 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               </p>
             </div>
             <!-- .card-content -->
-          </a>
+          <!-- </a> -->
         </article>
         <!-- .card -->
 
         <article class="card">
-          <a href="#">
+          <!-- <a href="#"> -->
             <picture class="thumbnail">
               <img src="img/de_stijl_6.jpg" alt="arch" />
             </picture>
@@ -115,12 +115,12 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               </p>
             </div>
             <!-- .card-content -->
-          </a>
+          <!-- </a> -->
         </article>
         <!-- .card -->
 
         <article class="card">
-          <a href="#">
+          <a href="projects.html">
             <picture class="thumbnail">
               <img src="img/keith-haring.png" alt="arch" />
             </picture>
