Adds projects css page link

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <link rel="alternate icon" href="img/favicon.ico" />
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/projects.css" />
     <title>David Calabrese | Web Developer | For Hire</title>
   </head>
 
@@ -59,7 +60,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <main class="container">
 
       <section class="intro">
-        <p>Here are a few of the projects I've done. Click on the card to check out the code on GitHub. Some of them are hosted on GitHub pages as well.</p>
+        <p>Here are a few of the projects I've done. Click on the card to check out the code on GitHub. Most of them are hosted live on GitHub pages as well.</p>
       </section>
 
       <section class="cards">
