--- a/index.html
+++ b/index.html
@@ -83,62 +83,11 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           Thanks for coming to visit! This site is currently under construction &#8212; most of the site now is just placeholders for what will eventually be (I promise) fantastic content &#8212; I appreciate your patience. I'm whittling away at the site in my spare time and I hope to be done by the end of 2021. At that point it will feature my portfolio of projects as well as a resume and other contact information for employers to find and hire me. In the meantime, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
         </p>
       </section>
-      <section class="cards">
-        <article class="card">
-          <!-- <a href="#"> -->
-            <picture class="thumbnail">
-              <img src="img/mondrian-square.jpg" alt="mondrian" />
-            </picture>
-            <div class="card-content">
-              <h2>De Stilj</h2>
-              <p>
-                De Stilj is Dutch for "The Style". Proponents of De Stilj advocated pure abstraction and universality by
-                a reduction to the essentials of form and color. In software, a universal design aethetic speaks to a
-                wide audience.
-              </p>
-            </div>
-            <!-- .card-content -->
-          <!-- </a> -->
-        </article>
-        <!-- .card -->
 
-        <article class="card">
-          <!-- <a href="#"> -->
-            <picture class="thumbnail">
-              <img src="img/de_stijl_6.jpg" alt="arch" />
-            </picture>
-            <div class="card-content">
-              <h2>Design</h2>
-              <p>
-                This is kind of a neat design, don't you think? Straight lines, basic shapes, simple colors. A strong
-                sense of symmetry, balance and cohesion. Very simple, yet elegant, like well-designed software.
-              </p>
-            </div>
-            <!-- .card-content -->
-          <!-- </a> -->
-        </article>
-        <!-- .card -->
-
-        <article class="card">
-          <a href="projects.html">
-            <picture class="thumbnail">
-              <img src="img/keith-haring.png" alt="arch" />
-            </picture>
-            <div class="card-content">
-              <h2>Just for Fun</h2>
-              <p>
-                These people in the Frank Haring painting are having fun. I believe that having fun is important. I also
-                like to work hard, and I find I work hardest when I'm having fun. Check out some of the projects I've
-                done "just for" fun.
-              </p>
-            </div>
-            <!-- .card-content -->
-          </a>
-        </article>
-        <!-- .card -->
-      </section> <!-- end .cards -->
-
-      </main>
+      <section class="banner">
+        <img src="img/lichtenstein-sunrise.jpg" alt="sunrise">
+      </section> 
+    </main>
 
     <footer>
       <div class="social">
