Adds dark mode toggle
Does not save user preferences yet

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       </div>
     </header>
 
+    <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
+
     <main class="container">
 
       <section class="intro">
@@ -107,5 +109,4 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     </footer>
   </body>
 </html>
-
 
