--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       </div>
     </header>
 
+    <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
+
     <main class="container">
 
       <section class="intro">
