Adds book generator project card

--- a/projects.html
+++ b/projects.html
@@ -115,6 +115,24 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         </article>
         <!-- .card -->
 
+        <article class="card">
+          <a href="https://davidtcalabrese.github.io/book-generator/">
+            <picture class="thumbnail">
+              <img src="img/random-book-screenshot.PNG" alt="city sort" />
+            </picture>
+          </a>
+          <a href="https://github.com/davidtcalabrese/book-generator">
+            <div class="card-content">
+              <h2>Random Book Generator</h2>
+              <p>
+                This page was created as a tool for a book club member who had a hard timing making a decision when it was his turn to select a book.   
+              </p>
+            </div>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
+
       </section>
 
     </main>
