Makes each project card two links

--- a/projects.html
+++ b/projects.html
@@ -62,48 +62,54 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <main class="container">
 
       <section class="intro">
-        <p>Here are a few of the projects I've done. Click on the card to check out the code on GitHub. Most of them are hosted live on GitHub pages as well.</p>
+        <p>Here are a few of the projects I've done. Most of them are hosted live on GitHub pages as well. For those hosted live, click the picture to see the page. Click the description to see the repository</p>
       </section>
 
       <section class="cards">
 
         <article class="card">
-          <a href="https://github.com/davidtcalabrese/tax-calculator">
+          <a href="https://davidtcalabrese.github.io/tax-calculator/">
             <picture class="thumbnail">
               <img src="img/tax-calculator-screenshot-2-resized.PNG" alt="tax calculator" />
             </picture>
-            <div class="card-content">
-              <h2>Tax Calculator</h2>
-              <p>
-                Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going. 
-              </p>
-            </div>
+          </a>
+          <a href="https://github.com/davidtcalabrese/tax-calculator">
+              <div class="card-content">
+                <h2>Tax Calculator</h2>
+                <p>
+                  Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going. 
+                </p>
+              </div>
             <!-- .card-content -->
           </a>
         </article>
         <!-- .card -->
 
         <article class="card">
-          <a href="https://github.com/davidtcalabrese/dad-jokes">
+          <a href="https://davidtcalabrese.github.io/dad-jokes/">
             <picture class="thumbnail">
               <img src="img/dad-jokes-screenshot.PNG" alt="dad jokes" />
             </picture>
-            <div class="card-content">
-              <h2>Dad Joke Fetcher</h2>
-              <p>
-                This is a site I made using JavaScript async/await to pull in jokes from an API (icanhazdadjoke). I'm a fan of Phil Dunphy, Ty Burrell's character on Modern Family, so I added him for good measure. 
-              </p>
-            </div>
-            <!-- .card-content -->
           </a>
+            <a href="https://github.com/davidtcalabrese/dad-jokes">
+              <div class="card-content">
+                <h2>Dad Joke Fetcher</h2>
+                <p>
+                  This is a site I made using JavaScript async/await to pull in jokes from an API (icanhazdadjoke). I'm a fan of Phil Dunphy, Ty Burrell's character on Modern Family, so I added him for good measure. 
+                </p>
+              </div>
+            <!-- .card-content -->
+            </a>
         </article>
         <!-- .card -->
 
         <article class="card">
-          <a href="https://github.com/davidtcalabrese/sort-game">
+          <a href="https://davidtcalabrese.github.io/sort-game/">
             <picture class="thumbnail">
               <img src="img/city-sort-screenshot-resized.PNG" alt="city sort" />
             </picture>
+          </a>
+          <a href="https://github.com/davidtcalabrese/sort-game">
             <div class="card-content">
               <h2>City Sort Game</h2>
               <p>
@@ -134,7 +140,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <!-- .card -->
 
       </section>
-
     </main>
 
     <footer>
