Adds new screenshots

--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <article class="card">
           <a href="https://davidtcalabrese.github.io/tax-calculator/">
             <picture class="thumbnail">
-              <img src="img/tax-calculator-screenshot-2-resized.PNG" alt="tax calculator" />
+              <img src="img/tax-calculator-screenshot.PNG" alt="tax calculator" />
             </picture>
           </a>
           <a href="https://github.com/davidtcalabrese/tax-calculator">
@@ -104,11 +104,13 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <!-- .card -->
 
         <article class="card">
-          <a href="https://davidtcalabrese.github.io/sort-game/">
+
             <picture class="thumbnail">
-              <img src="img/city-sort-screenshot-resized.PNG" alt="city sort" />
+              <a href="https://davidtcalabrese.github.io/sort-game/">
+                <img src="img/city-sort-1248-866.png" alt="city sort" />
+              </a>
             </picture>
-          </a>
+
           <a href="https://github.com/davidtcalabrese/sort-game">
             <div class="card-content">
               <h2>City Sort Game</h2>
