Adjusts skill section

--- a/resume.html
+++ b/resume.html
@@ -123,11 +123,11 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <li>JavaScript, Node.js</li>
                 <li>HTML, CSS, Sass</li>
                 <li>MySQL Developer, Adminer & Oracle SQL Developer</li>
-                <li>Python, Django, Flask</li>
+                <li>Python, Flask</li>
                 <li>Git, Github, Git Flow</li>
                 <li>Linux, Shell Scripting</li>
                 <li>Cloud & Container Experience</li>
-                <li>PHP, Laravel</li>
+                <li>PHP</li>
                 <li>Postman, API Development</li>
               </ul>
             </div>
