Changes sql section

--- a/resume.html
+++ b/resume.html
@@ -122,7 +122,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <li>Java, J2EE</li>
                 <li>JavaScript, Node.js</li>
                 <li>HTML, CSS, Sass</li>
-                <li>MySQL Developer, Adminer & Oracle SQL Developer</li>
+                <li>MySQL, Oracle, PostgreSQL</li>
                 <li>Python, Flask</li>
                 <li>Git, Github, Git Flow</li>
                 <li>Linux, Shell Scripting</li>
